--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="word_list">Word List</string>
     <string name="jlpt">JLPT</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="spinner_title">Chọn cấp độ</string>
     <string-array name="level_array">
         <item>N5</item>
         <item>N4</item>
