--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="no_result">No result</string>
     <string name="katakana">Katakana</string>
     <string name="hiragana">Hiragana</string>
+    <string name="translate">Translate</string>
+    <string name="english">English</string>
+    <string name="japanese">Japanese</string>
 </resources>
