--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="translate">Translate</string>
     <string name="english">English</string>
     <string name="japanese">Japanese</string>
+    <string name="chatbot">ChatBot</string>
 </resources>
