Clean up code & fix bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Learn Japanese</string>
+    <string name="app_name">Learn Japanese with Haru</string>
     <string name="temp">Nothing</string>
     <string name="home">Home</string>
     <string name="search">Search</string>
